--- a/proj4/Makefile
+++ b/proj4/Makefile
@@ -1,27 +1,26 @@
 ###################################################################
-#  Makefile for project 4
-#
-#  Daniel R. Reynolds
-#  SMU Mathematics
-#  Math 3316
-#  31 October 2015
+#	Author: Ben Maxey
+#	
+#	Makefile for HPSC Project 4
 ###################################################################
 
-# compiler & flags
-CXX = g++
-CXXFLAGS = -O2 -std=c++11
+#Flags
+FLAG = -std=c++14
 
-# makefile targets
-all : test_Gauss2.exe
+#Targets
+all : test_int.exe test_adapt.exe
 
-test_Gauss2.exe : test_Gauss2.cpp composite_Gauss2.cpp
-	$(CXX) $(CXXFLAGS) $^ -o $@
+test_int.exe : test_int.o
+	g++ $^ -o $@ $(FLAG)
+
+test_adapt.exe : test_adapt.o
+	g++ $^ -o $@ $(FLAG) 
+
+%.o: %.cpp
+	g++ -c $< $(FLAG)
 
 clean :
 	\rm -f *.o *.txt
 
 realclean : clean
-	\rm -f *.exe *~
-
-
-####### End of Makefile #######
+	\rm -f *.o *.txt *.exe
